mf-project/mf-e-recipes-be/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mf-e-recipes-be
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: mf-e-recipes-be-label
  template:
    metadata:
      labels:
        pod: mf-e-recipes-be-label
    spec:
      containers:
        - name: mf-e-recipes-fe-container
          image: mfranczel/e-recipes-webapi:1.0.0-31
          imagePullPolicy: Always
          ports:
            - name: webapi-port
              containerPort: 8080
          resources:
            requests:
              memory: "32Mi"
              cpu: "0.1"
            limits:
              memory: "128Mi"
              cpu: "0.3"
